# fastapi-url-shortener

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  traefik.toml
app/: config.py  database.py  db.py  main.py  models.py  router.py
app/app/: config.py
app/controller/: system_controller.py  url_controller.py  view_controller.py
app/repository/: url_repository.py
app/templates/: index.html
app/utils/: hash.py
grafana/: dashboard.json
grafana/datasources/: datasource.yml
prometheus/: prometheus.yml
stress/: README.md  locust_file.py  populate_db.sh  report_1724032101.822066.html  report_1724044096.3321228.html  urls.txt
tests/controller/: test_url_controller.py
tests/repository/: test_url_repository.py
tests/utils/: test_hash.py
