[tool.poetry]
name = "fastapi-url-shortener"
version = "0.1.0"
description = "coding challenge: short url generator app"
authors = ["neumann-mlucas <neumann.m.lucas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiosqlite = "^0.20.0"
asyncpg = "^0.29.0"
fastapi = "^0.111.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.7.2"
pydantic-settings = "^2.4.0"
redis = "^5.0.8"
sqlalchemy = "^2.0.32"
uvicorn = "^0.30.0"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.8"
pdbp = "^1.5.4"

[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies]
ruff = "^0.3.5"
black = "^24.3.0"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
